Shifted Files to correct Maven convention
All files are in src folder now.

--- a/task_catalyst/src/main/resources/css/DarkTheme.css
+++ b/task_catalyst/src/main/resources/css/DarkTheme.css
@@ -1,7 +1,3 @@
-/**
- * @author Toh Zhen Yu (A0111921W)
- */
- 
 #exitButton {          
     -fx-background-image: url("../images/close24.png");
     -fx-background-size: 24 24;
@@ -31,7 +27,7 @@
 /* GUI Interface background colour */
 .theme {
     master-color: grey;
-    -fx-background-color: #ffc107;
+    -fx-background-color: #DFB951;
     -fx-font-size: 14px;
 }
 
@@ -64,7 +60,7 @@
 
 /* Selected row when table not focused */
 .table-row-cell:filled:focused:selected {
-    -fx-background-color: #6495ed;
+    -fx-background-color: grey;
     -fx-background-insets: 0, 1, 2;
     -fx-background: -fx-accent;
     -fx-text-fill: -fx-selection-bar-text;
